<resources>
    <string name="app_name">Centrum outletowe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Centrum outletowe</string>
    <string name="nav_header_subtitle">Gobral, wersja 0.0.1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_najnowsze">Najnowsze</string>
    <string name="menu_wyszukiwarka">Wyszukiwarka</string>
    <string name="menu_rtveuro">RTV Euro AGD</string>
    <string name="menu_sklep2">Sklep 2</string>
    <string name="menu_zapisane">Zapsiane</string>
    <string name="menu_ustawienia">Ustawienia</string>
</resources>
