<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_sync_black_24dp"
            android:title="@string/menu_najnowsze" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_wyszukiwarka" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_rtveuro" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_sklep2" />
    </group>

    <item android:title="Aplikacja">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_stars_black_24dp"
                android:title="@string/menu_zapisane" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_ustawienia" />
        </menu>
    </item>

</menu>
